tests/ui/fail/const-jnistr-from-cstr.stderr
error[E0080]: evaluation panicked: JNIStr::from_cstr: input is not valid modified UTF-8
 --> tests/ui/fail/const-jnistr-from-cstr.rs:4:41
  |
4 |     const INVALID_MUTF8_CSTR: &JNIStr = JNIStr::from_cstr(c"invalid mutf8: 🦀");
  |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `main::INVALID_MUTF8_CSTR` failed inside this call
  |
note: inside `JNIStr::from_cstr`
 --> src/strings/ffi_str.rs
  |
  |             panic!("JNIStr::from_cstr: input is not valid modified UTF-8");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
